About y TriviaPage se agrego la foto del programodor en la pag About. se agrego funcionalidad a la pag Trivia.

--- a/Trivia/src/pages/about/about.html
+++ b/Trivia/src/pages/about/about.html
@@ -17,6 +17,8 @@
 
 <ion-content padding>
 
+<img src="https://avatars0.githubusercontent.com/u/17879398?v=3&u=d1b8051fd5a23b7bb74229c86645b78635de81ea&s=400" alt="El autor" style="width:220px;height:220px;"><br>
+<br>
 Apellido: Alvarez <br>
 <br>
 Nombre: Jessica Denise <br>
