Update. Se creo la page de registro junto con su logica. Se creo la page de resultados junto con su logica. Se modifico la page trivia. Se agregaron css.

--- a/Trivia/src/pages/about/about.html
+++ b/Trivia/src/pages/about/about.html
@@ -14,26 +14,35 @@
 
 </ion-header>
 
-
 <ion-content padding>
 
-<img src="https://avatars0.githubusercontent.com/u/17879398?v=3&u=d1b8051fd5a23b7bb74229c86645b78635de81ea&s=400" alt="El autor" style="width:220px;height:220px;"><br>
-<br>
-Apellido: Alvarez <br>
-<br>
-Nombre: Jessica Denise <br>
-<br>
-División: 4º A <br>
-<br>
-Mail: jessica.alvarezwidd@gmail.com<br>
-<br>
-Pagina: https://github.com/JessicaAlvarezWidd <br>
-<br>
-<br>
-Hello dear User!<br>
-I would like to tell you a little about this App and myself.<br>
-So, I'm a last years student of the "Tecnico Superior en Programacion" career <br>
-and this Trivia App is my first multi platform app that i have created <br>
-and it's part of my first exam from the subject "Practica Profesional".<br>
-I hope you Enjoy it!<br>
+<ion-card>
+
+    <ion-item>
+      <ion-avatar item-left>
+        <img src="https://avatars0.githubusercontent.com/u/17879398?v=3&u=d1b8051fd5a23b7bb74229c86645b78635de81ea&s=400">
+      </ion-avatar>
+      <h2>Alvarez Jessica Denise</h2>
+      <p>4to 'A'</p>
+    </ion-item>
+
+    <ion-card-content>
+      <p>GitHub: <a>https://github.com/JessicaAlvarezWidd</a> </p>
+      <p>Gmail: jessica.alvarezwidd@gmail.com </p>
+      <br>
+      <div style="font-size:25px;">Hello dear User!</div>      
+      <span style=" font-style: italic;">I would like to tell you a little about this App and myself.</span>
+      <br>
+      <span style=" font-style: italic;">So, I'm a last years student of the "Tecnico Superior en Programacion" career</span>
+      <br>
+      <span style=" font-style: italic;">and this Trivia App is my first multi platform app that i have created</span>
+      <br>
+      <span style=" font-style: italic;">and it's part of my first exam from the subject "Practica Profesional".</span>
+      <br>
+      <span style=" font-style: italic;">I hope you Enjoy it!</span>
+      
+    </ion-card-content>
+
+  </ion-card>
+
 </ion-content>
