Update. Se termino de modificar codigo en PPT page. se agregaron estilos.

--- a/piedra-papel-tijera/src/pages/about/about.html
+++ b/piedra-papel-tijera/src/pages/about/about.html
@@ -35,7 +35,7 @@
       <br>
       <span style=" font-style: italic;">So, I'm a last years student of the "Tecnico Superior en Programacion" career</span>
       <br>
-      <span style=" font-style: italic;">and this Trivia App is my first multi platform app that i have created</span>
+      <span style=" font-style: italic;">and this App is my second multi platform app that i have created</span>
       <br>
       <span style=" font-style: italic;">and it's part of my first exam from the subject "Practica Profesional".</span>
       <br>
