--- a/piedra-papel-tijera/src/pages/ppt/ppt.html
+++ b/piedra-papel-tijera/src/pages/ppt/ppt.html
@@ -17,7 +17,7 @@
 
 
 <ion-content padding>
- <div text-left>
+ <div text-left style="color:snow"  >
     Bienvenid@ {{userLogin.auth.displayName}} 
   </div>
    <!--<div text-center>
@@ -25,8 +25,8 @@
    </div>-->
 
  <div>
-    <button ion-button block (click)="botonPrecionado(1)">Piedra</button>
-    <button ion-button block (click)="botonPrecionado(2)">Papel</button>
-    <button ion-button block (click)="botonPrecionado(3)">Tijera</button>
+    <button ion-button block type="button" (click)="botonPrecionado(1)">Piedra</button>
+    <button ion-button block type="button" (click)="botonPrecionado(2)">Papel</button>
+    <button ion-button block type="button" (click)="botonPrecionado(3)">Tijera</button>
 </div>
 </ion-content>
